chore: configure Biome linter complexity threshold and format package.json

--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   },
   "type": "module",
   "sideEffects": false,
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "keywords": [
     "mongoose",
     "query-builder",
