--- a/docs/package.json
+++ b/docs/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "build:netlify": "next build && next export",
     "dev": "next dev",
+    "build": "next build",
+    "build:netlify": "next build",
+    "start": "next start",
     "lint": "biome lint .",
     "format": "biome format --write .",
-    "check": "biome check --write .",
-    "start": "next start"
+    "check": "biome check --write ."
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
