--- a/docs/package.json
+++ b/docs/package.json
@@ -22,6 +22,7 @@
     "prism-react-renderer": "latest",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-siteviews": "^2.0.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
